--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.9",
-    "use-sound": "^5.0.0"
+    "use-sound": "^5.0.0",
+    "uuid4": "^2.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
